Cleaning pagerank filter files

--- a/Outlier_Detection/PageRank_Filter_Before_Clean.ipynb
+++ b/Outlier_Detection/PageRank_Filter_Before_Clean.ipynb
@@ -4,16 +4,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### **This Notebook Detects Representative Spectra within each Surface**"
+    "# PageRank Filter Before Finding Cleaning Parameters"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this appraoch, each spectra is a node and every node is connected to every other node in the graph making it fully connected. To calculate the relationahip weight between each node, we first calculate the euchildean distance between each spectra, using each spectras absorbance values as a vector. We can do this as the intervals between intensity data points remains unchanged across every spectra. We then pass the euchildean distance through the Gaussian kernel function to get a similarity measure between each spectra. This is then used as a relationship weight.\n",
+    "In this appraoch, each spectra is a node and every node is connected to every other node in the graph making it fully connected. To calculate the relationahip weight between each node, we first calculate the euchildean distance between each spectra, using each spectras absorbance values as a vector. We then pass the euchildean distance through the Gaussian kernel function to get a similarity measure between each spectra. This is then used as a relationship weight.\n",
     "\n",
-    "Using this graph, we then detect the most representative spectra within each surface based on the PageRank centrality."
+    "In this notebook, this graph is built first to get the PageRank values based on the raw snv scaled spectra. The raw data is then cleaned and the PageRank values are joined to this new cleaned dataset. The cleaning parameters were found in a bayesian search after the least central spectra were dropped. \n",
+    "\n",
+    "This should allow for more accurate cleaning parameters as they are being tuned to the \"true\" spectra and not being influenced by outliers."
    ]
   },
   {
