--- a/Outlier_Detection/PageRank_Filter_After_Clean.ipynb
+++ b/Outlier_Detection/PageRank_Filter_After_Clean.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### **This Notebook Detects Representative Spectra within each Surface**"
+    "# PageRank Filter After Finding Cleaning Parameters"
    ]
   },
   {
@@ -13,7 +13,7 @@
    "source": [
     "In this appraoch, each spectra is a node and every node is connected to every other node in the graph making it fully connected. To calculate the relationahip weight between each node, we first calculate the euchildean distance between each spectra, using each spectras absorbance values as a vector. We can do this as the intervals between intensity data points remains unchanged across every spectra. We then pass the euchildean distance through the Gaussian kernel function to get a similarity measure between each spectra. This is then used as a relationship weight.\n",
     "\n",
-    "Using this graph, we then detect the most representative spectra within each surface based on the PageRank centrality."
+    "The spectra is cleaned first here, then the graph is constructed before the least central spectra are dropped."
    ]
   },
   {
