--- a/GroupKFold_Baseline_Approach/Random_Forest_and_Spectra_Cleaning_Demo.ipynb
+++ b/GroupKFold_Baseline_Approach/Random_Forest_and_Spectra_Cleaning_Demo.ipynb
@@ -36,7 +36,9 @@
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.metrics import accuracy_score\n",
     "from sklearn.model_selection import GroupKFold, cross_validate\n",
-    "from Spectra_Preparation_Functions import *"
+    "import sys\n",
+    "sys.path.append('..')\n",
+    "from Cleaning_and_Evaluation import *"
    ]
   },
   {
