--- a/GroupKFold_Baseline_Approach/GroupKFold_Feature_Importance.ipynb
+++ b/GroupKFold_Baseline_Approach/GroupKFold_Feature_Importance.ipynb
@@ -1508,7 +1508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1563,7 +1563,7 @@
     "ax2.legend(title='Status')\n",
     "\n",
     "# Title for the entire plot\n",
-    "plt.title('Feature Importance and Average Spectra of each Status')\n",
+    "plt.title('Average GroupKFold Feature Importance and Average Spectra of each Status')\n",
     "\n",
     "# # Show the plot\n",
     "# plt.tight_layout()\n",
