Cleaning GroupKFold Baseline Approach

--- a/GroupKFold_Baseline_Approach/Cleaning_Experiments_Extra_Trees.ipynb
+++ b/GroupKFold_Baseline_Approach/Cleaning_Experiments_Extra_Trees.ipynb
@@ -1418,32 +1418,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "## Old Version\n",
-    "\n",
-    "# def baseline_als_optimized(y, lam, p, niter=10):\n",
-    "#     L = len(y)\n",
-    "#     D = sparse.diags([1,-2,1],[0,-1,-2], shape=(L,L-2))\n",
-    "#     D = lam * D.dot(D.transpose()) # Precompute this term since it does not depend on `w`\n",
-    "#     w = np.ones(L)\n",
-    "#     W = sparse.spdiags(w, 0, L, L)\n",
-    "#     for i in range(niter):\n",
-    "#         W.setdiag(w) # Do not create a new matrix, just update diagonal values\n",
-    "#         Z = W + D\n",
-    "#         z = spsolve(Z, w*y)\n",
-    "#         w = p * (y > z) + (1-p) * (y < z)\n",
-    "#     return z\n",
-    "\n",
-    "# lam = 10 ** 8\n",
-    "# p = 0.05\n",
-    "# df['Baseline_Corrected_Absorbance'] = df.groupby('SpecID')['Despiked_Absorbance'].transform(lambda x: baseline_als_optimized(x, lam=lam, p=p))"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 21,
    "metadata": {},
    "outputs": [],
@@ -1455,13 +1429,6 @@
     "        corrected, _ = asls(x, lam=lam, p=p)\n",
     "        #corrected, _ = airpls(x, lam=lam)\n",
     "        return corrected"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The PyBaselines Library Performs this much faster."
    ]
   },
   {
@@ -2603,6 +2570,13 @@
    "metadata": {},
    "source": [
     "----"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Other approaches"
    ]
   },
   {
