--- a/GroupKFold_Baseline_Approach/Cleaning_Experiments_Random_Forest.ipynb
+++ b/GroupKFold_Baseline_Approach/Cleaning_Experiments_Random_Forest.ipynb
@@ -235,180 +235,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#df.to_csv(\"../../data/exosomes.raw_spectrum_400-1800.csv\", index=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>SpecID</th>\n",
-       "      <th>Seq</th>\n",
-       "      <th>WaveNumber</th>\n",
-       "      <th>Absorbance</th>\n",
-       "      <th>SurID</th>\n",
-       "      <th>Status</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>293</th>\n",
-       "      <td>201210-1-00</td>\n",
-       "      <td>293</td>\n",
-       "      <td>400.22778</td>\n",
-       "      <td>1765.6628</td>\n",
-       "      <td>201210-1</td>\n",
-       "      <td>Normal</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>294</th>\n",
-       "      <td>201210-1-00</td>\n",
-       "      <td>294</td>\n",
-       "      <td>400.91116</td>\n",
-       "      <td>1774.7809</td>\n",
-       "      <td>201210-1</td>\n",
-       "      <td>Normal</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>295</th>\n",
-       "      <td>201210-1-00</td>\n",
-       "      <td>295</td>\n",
-       "      <td>401.59454</td>\n",
-       "      <td>1769.0302</td>\n",
-       "      <td>201210-1</td>\n",
-       "      <td>Normal</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>296</th>\n",
-       "      <td>201210-1-00</td>\n",
-       "      <td>296</td>\n",
-       "      <td>402.27789</td>\n",
-       "      <td>1756.4220</td>\n",
-       "      <td>201210-1</td>\n",
-       "      <td>Normal</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>297</th>\n",
-       "      <td>201210-1-00</td>\n",
-       "      <td>297</td>\n",
-       "      <td>402.96127</td>\n",
-       "      <td>1758.8690</td>\n",
-       "      <td>201210-1</td>\n",
-       "      <td>Normal</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8023277</th>\n",
-       "      <td>210526-3-09</td>\n",
-       "      <td>2337</td>\n",
-       "      <td>1797.03870</td>\n",
-       "      <td>1617.3926</td>\n",
-       "      <td>210526-3</td>\n",
-       "      <td>Hyperglycemia</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8023278</th>\n",
-       "      <td>210526-3-09</td>\n",
-       "      <td>2338</td>\n",
-       "      <td>1797.72200</td>\n",
-       "      <td>1633.0911</td>\n",
-       "      <td>210526-3</td>\n",
-       "      <td>Hyperglycemia</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8023279</th>\n",
-       "      <td>210526-3-09</td>\n",
-       "      <td>2339</td>\n",
-       "      <td>1798.40550</td>\n",
-       "      <td>1633.3076</td>\n",
-       "      <td>210526-3</td>\n",
-       "      <td>Hyperglycemia</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8023280</th>\n",
-       "      <td>210526-3-09</td>\n",
-       "      <td>2340</td>\n",
-       "      <td>1799.08890</td>\n",
-       "      <td>1641.8665</td>\n",
-       "      <td>210526-3</td>\n",
-       "      <td>Hyperglycemia</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8023281</th>\n",
-       "      <td>210526-3-09</td>\n",
-       "      <td>2341</td>\n",
-       "      <td>1799.77220</td>\n",
-       "      <td>1618.2405</td>\n",
-       "      <td>210526-3</td>\n",
-       "      <td>Hyperglycemia</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>6239205 rows × 6 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "              SpecID   Seq  WaveNumber  Absorbance     SurID         Status\n",
-       "293      201210-1-00   293   400.22778   1765.6628  201210-1         Normal\n",
-       "294      201210-1-00   294   400.91116   1774.7809  201210-1         Normal\n",
-       "295      201210-1-00   295   401.59454   1769.0302  201210-1         Normal\n",
-       "296      201210-1-00   296   402.27789   1756.4220  201210-1         Normal\n",
-       "297      201210-1-00   297   402.96127   1758.8690  201210-1         Normal\n",
-       "...              ...   ...         ...         ...       ...            ...\n",
-       "8023277  210526-3-09  2337  1797.03870   1617.3926  210526-3  Hyperglycemia\n",
-       "8023278  210526-3-09  2338  1797.72200   1633.0911  210526-3  Hyperglycemia\n",
-       "8023279  210526-3-09  2339  1798.40550   1633.3076  210526-3  Hyperglycemia\n",
-       "8023280  210526-3-09  2340  1799.08890   1641.8665  210526-3  Hyperglycemia\n",
-       "8023281  210526-3-09  2341  1799.77220   1618.2405  210526-3  Hyperglycemia\n",
-       "\n",
-       "[6239205 rows x 6 columns]"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 15,
    "metadata": {},
    "outputs": [
@@ -461,7 +287,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Train an Extra Trees Classifier on the full spectrum."
+    "#### Train a Random Forest Classifier on the full spectrum."
    ]
   },
   {
@@ -1325,15 +1151,6 @@
    ],
    "source": [
     "scaled_raw_df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#scaled_raw_df.to_csv(\"../../data/scaled_raw_spectra.csv\")"
    ]
   },
   {
