--- a/GroupKFold_Baseline_Approach/Cleaning_Experiments_SVC.ipynb
+++ b/GroupKFold_Baseline_Approach/Cleaning_Experiments_SVC.ipynb
@@ -1029,7 +1029,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    ">#### **Train a Support Vector Machine on the Raw Spectrum and evaluate it with GroupKFold cross-validation.**"
+    ">#### **Train a Support Vector Machine Classifier on the Raw Spectrum and evaluate it with GroupKFold cross-validation.**"
    ]
   },
   {
