--- a/GroupKFold_Baseline_Approach/GroupKFold_Feature_Importance.ipynb
+++ b/GroupKFold_Baseline_Approach/GroupKFold_Feature_Importance.ipynb
@@ -25,7 +25,10 @@
     "from sklearn.model_selection import GroupKFold, cross_val_score\n",
     "import numpy as np\n",
     "import seaborn as sns\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "import sys\n",
+    "sys.path.append('..')\n",
+    "from Cleaning_and_Evaluation import *"
    ]
   },
   {
@@ -203,29 +206,6 @@
    ],
    "source": [
     "df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 45,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def prepare_wavelength_df(df, absorbance_col, status_col='Status'):\n",
-    "\n",
-    "    # Pivot the DataFrame to get wavelengths as columns and absorbance values\n",
-    "    wavelength_df = df.pivot(index='SpecID', columns='WaveNumber', values=absorbance_col).reset_index()\n",
-    "    wavelength_df.columns.name = None\n",
-    "\n",
-    "    # Merge with the statuses based on SpecID\n",
-    "    # Include the SurID to perform GroupKFold CV\n",
-    "    statuses_and_surface = df[['SpecID', 'SurID', status_col]].drop_duplicates()\n",
-    "    wavelength_df = pd.merge(wavelength_df, statuses_and_surface, on='SpecID')\n",
-    "\n",
-    "    # Set SpecID as the index\n",
-    "    wavelength_df = wavelength_df.set_index('SpecID')\n",
-    "\n",
-    "    return wavelength_df"
    ]
   },
   {
