--- a/Outlier_Detection/IQR_Outlier_Proportion.ipynb
+++ b/Outlier_Detection/IQR_Outlier_Proportion.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Outlier Removal\n",
     "\n",
-    "This notebook will investigate if dropping spectra where a certain proportion of the absorbance values in a spectra are considered outliers, leads to increased model performance."
+    "<p align = \"justify\">This notebook will investigate if dropping spectra where a certain proportion of the absorbance values in a spectra are considered outliers, leads to increased model performance."
    ]
   },
   {
