--- a/Outlier_Detection/Median.ipynb
+++ b/Outlier_Detection/Median.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This notebook details getting the median spectra for each surface and then training a model based on these median surface spectra. The aim here is to remove noisy or outlier spectra, to be left with a spectrum that is representative of the true Raman fingerprint of that surface.\n",
+    "<p align = \"justify\">This notebook details getting the median spectra for each surface and then training a model based on these median surface spectra. The aim here is to remove noisy or outlier spectra, to be left with a spectrum that is representative of the true Raman fingerprint of that surface.\n",
     "\n",
     "This notebook uses KFold cross validation as there is no data leakage between surfaces since each spectrum only represents one surface"
    ]
