--- a/Graph_Engineering/Gaussian_Kernel_Graph_KFold.ipynb
+++ b/Graph_Engineering/Gaussian_Kernel_Graph_KFold.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Gaussian Kernel Graph\n",
     "\n",
-    "In this appraoch, each spectra is a node and every node is connected to every other node in the graph making it fully connected. To calculate the relationahip weight between each node, we first calculate the euchildean distance between each spectra, using each spectras absorbance values as a vector. We can do this as the intervals between intensity data points remains unchanged across every spectra. We then pass the euchildean distance through the Gaussian kernel function to get a similarity measure between each spectra. This is then used as a relationship weight."
+    "<p align = \"justify\">In this appraoch, each spectra is a node and every node is connected to every other node in the graph making it fully connected. To calculate the relationahip weight between each node, we first calculate the euchildean distance between each spectra, using each spectras absorbance values as a vector. We can do this as the intervals between intensity data points remains unchanged across every spectra. We then pass the euchildean distance through the Gaussian kernel function to get a similarity measure between each spectra. This is then used as a relationship weight."
    ]
   },
   {
