Tidying Replicate out apprach

--- a/GroupKFold_Baseline_Approach/Quick_Evaluation.ipynb
+++ b/GroupKFold_Baseline_Approach/Quick_Evaluation.ipynb
@@ -23,16 +23,16 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "from scipy.signal import savgol_filter\n",
-    "from sklearn.ensemble import ExtraTreesClassifier\n",
-    "from sklearn.ensemble import RandomForestClassifier\n",
-    "from sklearn.svm import SVC\n",
-    "from sklearn.model_selection import cross_val_score\n",
-    "from sklearn.model_selection import StratifiedKFold, KFold\n",
     "import seaborn as sns\n",
+    "import matplotlib.pyplot as plt\n",
+    "from sklearn.model_selection import cross_validate, GroupKFold\n",
+    "from sklearn.ensemble import ExtraTreesClassifier, RandomForestClassifier\n",
+    "from sklearn.svm import SVC\n",
+    "from sklearn.metrics import accuracy_score, precision_recall_fscore_support\n",
+    "from sklearn.metrics import classification_report\n",
     "import sys\n",
     "sys.path.append('..')\n",
-    "from Cleaning_and_Evaluation import *\n",
-    "import matplotlib.pyplot as plt"
+    "from Cleaning_and_Evaluation import *"
    ]
   },
   {
@@ -1051,18 +1051,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.model_selection import cross_validate, GroupKFold\n",
-    "from sklearn.ensemble import ExtraTreesClassifier, RandomForestClassifier\n",
-    "from sklearn.metrics import accuracy_score, precision_recall_fscore_support\n",
-    "from sklearn.metrics import classification_report"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 23,
    "metadata": {},
    "outputs": [],
@@ -1161,16 +1149,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def evaluate_random_forest_by_class(df):\n",
-    "\n",
+    "def evaluate_model_by_class(df, model):\n",
     "    groups = df['SurID']\n",
     "    X = df.drop(['Status', 'SurID'], axis=1)\n",
     "    y = df['Status']\n",
     "    \n",
     "    # Get unique class names from the 'y' dataset\n",
     "    class_names = y.unique()\n",
-    "\n",
-    "    rf = RandomForestClassifier(random_state=1234, criterion='entropy', max_depth=23, n_estimators=78)\n",
+    "    \n",
     "    cv = GroupKFold(n_splits=10)\n",
     "\n",
     "    accuracies = []\n",
@@ -1182,8 +1168,8 @@
     "        X_train, X_test = X.iloc[train_idx], X.iloc[test_idx]\n",
     "        y_train, y_test = y.iloc[train_idx], y.iloc[test_idx]\n",
     "        \n",
-    "        rf.fit(X_train, y_train)\n",
-    "        y_pred = rf.predict(X_test)\n",
+    "        model.fit(X_train, y_train)\n",
+    "        y_pred = model.predict(X_test)\n",
     "\n",
     "        accuracies.append(accuracy_score(y_test, y_pred))\n",
     "        precision, recall, f1, _ = precision_recall_fscore_support(y_test, y_pred, zero_division=0, labels=class_names)\n",
@@ -1192,7 +1178,7 @@
     "            recalls[i].append(r)\n",
     "            f1_scores[i].append(f)\n",
     "\n",
-    "    print(f\"{rf.__class__.__name__} Cross-Validation Accuracy: {np.mean(accuracies):.4f} +/- {np.std(accuracies):.4f}\\n\")\n",
+    "    print(f\"{model.__class__.__name__} Cross-Validation Accuracy: {np.mean(accuracies):.4f} +/- {np.std(accuracies):.4f}\\n\")\n",
     "    for i, class_name in enumerate(class_names):\n",
     "        print(f\"{class_name} Precision: {np.mean(precisions[i]):.4f} +/- {np.std(precisions[i]):.4f}\")\n",
     "        print(f\"{class_name} Recall: {np.mean(recalls[i]):.4f} +/- {np.std(recalls[i]):.4f}\")\n",
@@ -1205,7 +1191,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "evaluate_random_forest_by_class(wavelength_df)"
+    "evaluate_model_by_class(wavelength_df, rf)"
    ]
   },
   {
@@ -1454,14 +1440,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def evaluate_and_predict_surface_status(df):\n",
-    "   # Set the Surfaces as groups\n",
+    "def evaluate_and_predict_surface_status(df, model):\n",
+    "    \n",
+    "    # Set the Surfaces as groups\n",
     "    groups = df['SurID']\n",
     "    X = df.drop(['Status', 'SurID'], axis=1)\n",
     "    y = df['Status']\n",
-    "\n",
-    "    # Creating the RandomForestClassifier\n",
-    "    rf = RandomForestClassifier(random_state=1234, criterion='entropy', max_depth=23, n_estimators=78)\n",
     "    \n",
     "    # Using GroupKFold for classification tasks\n",
     "    cv = GroupKFold(n_splits=10)\n",
@@ -1477,10 +1461,10 @@
     "        groups_test = groups.iloc[test_index]\n",
     "        \n",
     "        # Fitting the model on the training set\n",
-    "        rf.fit(X_train, y_train)\n",
+    "        model.fit(X_train, y_train)\n",
     "\n",
     "        # Predicting the status for the test set\n",
-    "        y_pred = rf.predict(X_test)\n",
+    "        y_pred = model.predict(X_test)\n",
     "\n",
     "        # Appending the SurID, actual, and predicted status to the predictions DataFrame\n",
     "        fold_predictions = pd.DataFrame({\n",
@@ -1491,7 +1475,7 @@
     "        predictions_df = pd.concat([predictions_df, fold_predictions], ignore_index=True)\n",
     "\n",
     "    # Return the most common prediction of each spectra within the surface\n",
-    "    return predictions_df.groupby('SurID').agg(lambda x: x.mode()[0]).reset_index()"
+    "    return predictions_df.groupby('SurID').agg(lambda x: x.mode()[0]).reset_index()\n"
    ]
   },
   {
@@ -1620,7 +1604,7 @@
     }
    ],
    "source": [
-    "surface_predictions = evaluate_and_predict_surface_status(wavelength_df)\n",
+    "surface_predictions = evaluate_and_predict_surface_status(wavelength_df, rf)\n",
     "surface_predictions"
    ]
   },
