Finished refactoring accuracy final results

--- a/Final_Results/old/Best_Accuracy_Cleaning_Parameters.ipynb
+++ b/Final_Results/old/Best_Accuracy_Cleaning_Parameters.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The parameters were found by Optuna, optimsing for Group 10-Fold F1-Score"
+    "The parameters were found by Optuna, optimsing for Group 10-Fold Accuracy"
    ]
   },
   {
@@ -237,10 +237,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lam = 10 ** 9\n",
-    "p = 0.046\n",
-    "window_size = 51\n",
-    "poly_order = 3"
+    "# Optuna Outlier Parameters\n",
+    "despike_ma = 19\n",
+    "despike_threshold = 5.75\n",
+    "lam = 10 ** 10\n",
+    "p = 0.049\n",
+    "\n",
+    "# The search found that smoothing was harming performance\n",
+    "# window_size = 51\n",
+    "# poly_order = 3"
    ]
   },
   {
