Reformated KFold and GroupKFold

--- a/Final_Results/groupkfold_evaluation.ipynb
+++ b/Final_Results/groupkfold_evaluation.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### **Here are the Optimum GroupKFold Results from 400-1800cm-1**"
+    "#### **This notebook evaluates the Optimum GroupKFold Results from 400-1800 cm-1**"
    ]
   },
   {
@@ -224,7 +224,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> **Clean the Spectra With the Chosen Parameters**"
+    "> ##### **Clean the Spectra With the Chosen Parameters**"
    ]
   },
   {
@@ -841,7 +841,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### **Full Spectra**"
+    "> ##### **Full Spectra**"
    ]
   },
   {
@@ -939,7 +939,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### **Peak Stats**"
+    "> ##### **Peak Stats**"
    ]
   },
   {
@@ -1469,7 +1469,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### **Peak Bins**"
+    "> ##### **Peak Bins**"
    ]
   },
   {
