--- a/Final_Results/kfold_evaluation.ipynb
+++ b/Final_Results/kfold_evaluation.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### **Here are the Optimum KFold Results from 400-1800cm-1**"
+    "#### **Here are the Optimum KFold Results from 400-1800 cm-1**"
    ]
   },
   {
@@ -225,7 +225,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> **Clean the Spectra With the Chosen Parameters**"
+    "> ##### **Clean the Spectra With the Chosen Parameters**"
    ]
   },
   {
@@ -842,7 +842,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### **Full Spectra**"
+    "> ##### **Full Spectra**"
    ]
   },
   {
@@ -916,7 +916,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### **Peak Stats**"
+    "> ##### **Peak Stats**"
    ]
   },
   {
@@ -1408,7 +1408,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### **Peak Bins**"
+    "> ##### **Peak Bins**"
    ]
   },
   {
