--- a/Graph_Engineering/Biomarker_Peak_Range_Graph_KFold.ipynb
+++ b/Graph_Engineering/Biomarker_Peak_Range_Graph_KFold.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# This notebook will construct the nodes and edges that we will build our graph with"
+    "# Biomarker Peak Range Graph"
    ]
   },
   {
@@ -20,7 +20,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Importing and Preprocessig Data for Neo4j"
+    "## Importing and Preprocessing Data for Neo4j"
    ]
   },
   {
