--- a/Graph_Engineering/Gaussian_Kernel_Graph_KFold.ipynb
+++ b/Graph_Engineering/Gaussian_Kernel_Graph_KFold.ipynb
@@ -13,7 +13,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Importing and Preprocessig Data for Neo4j"
+    "## Importing and Preprocessing Data for Neo4j"
    ]
   },
   {
